@@ -1209,9 +1209,9 @@ static void pbsd_init_reque(
     {
     /* update the state, typically to some form of QUEUED */
 
-    svr_evaljobstate(pjob, &newstate, &newsubstate, 0);
+    svr_evaljobstate(pjob,&newstate,&newsubstate,0);
 
-    svr_setjobstate(pjob, newstate, newsubstate);
+    svr_setjobstate(pjob,newstate,newsubstate);
     } 
   else 
     {
