@@ -3,6 +3,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
 2.1.2
   b - fix momctl queries with multiple hosts
   b - don't fail make install if --without-sched
+  b - correct MOM compile error with atol()
+  f - qsub will now retry connecting to pbs_server (see manpage)
 
 2.1.1
 
